Fix the HTML & CSS

--- a/memoryGame.html
+++ b/memoryGame.html
@@ -2,20 +2,40 @@
 <html>
 
 <head>
-  <!-- <title>Template</title> a modifier -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
-  <style>
-  </style>
+    <title>memoryGame</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Geostar+Fill" rel="stylesheet">    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/memoryGame.css">
+    <style>
+    </style>
 </head>
 
 <body>
+   <h1>Memory Game</h1>
+    <div class='container'>
+        <div class='row '>
+                <div class='ml-2 col-sm-3 col-xs-6'><div class='tableau'></div></div>
+                <div class='ml-2 col-sm-3 col-xs-6'><div class='tableau'></div></div>
+                <div class='ml-2 col-sm-3 col-xs-6'><div class='tableau'></div></div>
+                <div class='ml-2 col-sm-3 col-xs-6'><div class='tableau'></div></div>
+        </div>
+        <div class='row '>
+            <div class='ml-2 col-sm-3 col-xs-6'><div class='tableau'></div></div>
+            <div class='ml-2 col-sm-3 col-xs-6'><div class='tableau'></div></div>
+            <div class='ml-2 col-sm-3 col-xs-6'><div class='tableau'></div></div>
+            <div class='ml-2 col-sm-3 col-xs-6'><div class='tableau'></div></div>
+        </div>
 
-
-  <!-- <script src="./js/GeekOut1.js"></script> -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <div class='row '>
+            <div class='ml-2 col-sm-3 col-xs-6'><div class='tableau'></div></div>
+            <div class='ml-2 col-sm-3 col-xs-6'><div class='tableau'></div></div>
+            <div class='ml-2 col-sm-3 col-xs-6'><div class='tableau'></div></div>
+            <div class='ml-2 col-sm-3 col-xs-6'><div class='tableau'></div></div>
+        </div>
+    </div>
+    <script src="./js/memoryGame.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 
 </html>
