--- a/memoryGame.html
+++ b/memoryGame.html
@@ -12,8 +12,22 @@
 
 <body>
     <h1>Memory Game</h1>
-<button>New Game</button>
+
     <div class='container'>
+        <div class='row '>
+            <div class='col-sm-12 col-xs-12'> <button id="btnstart" class="btn">New Game</button></div>
+        </div>
+        <div class='row '>
+            <div class='col-sm-12 col-xs-12'>
+                <div id="myModal" class="modal">
+                    <div class="modal-content">
+                        <span>
+                            <p>You won !!! Congratulation !!!</p><button id="btnstart">New Game</button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class='row '>
             <div class='col-sm-3 col-xs-6'>
                 <div id='card0' class='tableau'></div>
